Added: Redux, Api components, Login Page.

--- a/SimpleVouchersFrontend/src/components/Styles/Home.css
+++ b/SimpleVouchersFrontend/src/components/Styles/Home.css
@@ -1,8 +1,4 @@
-﻿body {
-    overflow-x: hidden;
-    background-color: #e0e0eb;
-}
-
+﻿
 .mainTable-container{
     margin-top:10vh;
     margin-right:5%;
