--- a/SimpleVouchersFrontend/src/components/Styles/MainTable.css
+++ b/SimpleVouchersFrontend/src/components/Styles/MainTable.css
@@ -7,11 +7,16 @@ Form{
     height: 100%;
     
 }
-.col-btn > button{
+.col-btn>button{
+   width: 100px; 
+}
+#linkToCreate{
     float:right;
     margin-right:14%;
     margin-bottom:10px;
     width:30%;
+    color: snow;
+    text-decoration: none;
 }
 tr td{
     text-align: center;
@@ -32,7 +37,6 @@ tbody {
 .td-lp{
     width:1%;
 }
-
 .correctDate{
     background-color:lightgreen;
 }
